Details
-
Bug
-
Resolution: Fixed
-
P3
-
16, 17
-
b31
-
generic
-
generic
Backports
Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
---|---|---|---|---|---|---|
JDK-8259419 | 17 | Wang Huang | P3 | Resolved | Fixed | b05 |
JDK-8260102 | 16.0.1 | Wang Huang | P3 | Resolved | Fixed | b03 |
Description
$java --add-modules=jdk.incubator.vector -Xcomp -XX:CompileCommand=compileonly,TestCast16BTo2D::* -XX:+UnlockDiagnosticVMOptions -XX:+PrintIntrinsics TestCast16BTo2D
before fixing:
** not supported: arity=1 op=cast/5 vlen2=2 etype1=byte ismask=0
@ 3 jdk.internal.util.Preconditions::checkIndex (18 bytes) (intrinsic)
@ 101 java.lang.Object::getClass (0 bytes) (intrinsic)
@ 109 java.lang.Object::getClass (0 bytes) (intrinsic)
@ 3 jdk.internal.util.Preconditions::checkIndex (18 bytes) (intrinsic)
@ 31 jdk.internal.vm.vector.VectorSupport::load (38 bytes) (intrinsic)
@ 128 jdk.internal.vm.vector.VectorSupport::convert (39 bytes) failed to inline (intrinsic)
@ 42 jdk.internal.vm.vector.VectorSupport::store (38 bytes) (intrinsic)
Expect:
@ 3 jdk.internal.util.Preconditions::checkIndex (18 bytes) (intrinsic)
@ 101 java.lang.Object::getClass (0 bytes) (intrinsic)
@ 109 java.lang.Object::getClass (0 bytes) (intrinsic)
@ 3 jdk.internal.util.Preconditions::checkIndex (18 bytes) (intrinsic)
@ 31 jdk.internal.vm.vector.VectorSupport::load (38 bytes) (intrinsic)
@ 128 jdk.internal.vm.vector.VectorSupport::convert (39 bytes) (intrinsic)
@ 42 jdk.internal.vm.vector.VectorSupport::store (38 bytes) (intrinsic)
before fixing:
** not supported: arity=1 op=cast/5 vlen2=2 etype1=byte ismask=0
@ 3 jdk.internal.util.Preconditions::checkIndex (18 bytes) (intrinsic)
@ 101 java.lang.Object::getClass (0 bytes) (intrinsic)
@ 109 java.lang.Object::getClass (0 bytes) (intrinsic)
@ 3 jdk.internal.util.Preconditions::checkIndex (18 bytes) (intrinsic)
@ 31 jdk.internal.vm.vector.VectorSupport::load (38 bytes) (intrinsic)
@ 128 jdk.internal.vm.vector.VectorSupport::convert (39 bytes) failed to inline (intrinsic)
@ 42 jdk.internal.vm.vector.VectorSupport::store (38 bytes) (intrinsic)
Expect:
@ 3 jdk.internal.util.Preconditions::checkIndex (18 bytes) (intrinsic)
@ 101 java.lang.Object::getClass (0 bytes) (intrinsic)
@ 109 java.lang.Object::getClass (0 bytes) (intrinsic)
@ 3 jdk.internal.util.Preconditions::checkIndex (18 bytes) (intrinsic)
@ 31 jdk.internal.vm.vector.VectorSupport::load (38 bytes) (intrinsic)
@ 128 jdk.internal.vm.vector.VectorSupport::convert (39 bytes) (intrinsic)
@ 42 jdk.internal.vm.vector.VectorSupport::store (38 bytes) (intrinsic)
Attachments
Issue Links
- backported by
-
JDK-8259419 JVM is failed to inline in jdk.internal.vm.vector.VectorSupport::convert
-
- Resolved
-
-
JDK-8260102 JVM is failed to inline in jdk.internal.vm.vector.VectorSupport::convert
-
- Resolved
-