8258989: JVM is failed to inline in jdk.internal.vm.vector.VectorSupport::convert